Improve accuracy of SUIT CSS regex
This adds some extra test cases for SUIT selectors and makes the regex
more robust against edge cases.

```
^\.                  - Match a dot at the start of the string
(?:[a-z0-9]*-)?      - Then look for optional namespace
[A-Z]                - Match a single capital letter at the start of Component name
(?:[a-zA-Z0-9]+)     - Match the rest of the component name...
(?:-[a-zA-Z0-9]+)?$  - Match optional descendant
```

https://regex101.com/r/AA4xaq/3

Fixes #16

--- a/test/fixtures/filter-suit.css
+++ b/test/fixtures/filter-suit.css
@@ -6,6 +6,18 @@
   background-color: red;
 }
 
+.namespace-MyComponent {
+  cat: dog;
+}
+
+.namespace-MyComponent-desc {
+  cat: dog;
+}
+
+.MyComponent[aria-hidden="true"] {
+  display: none;
+}
+
 .MyComponent.is-animating {
   cat: dog;
 }
