Prevent duplicate selectors being added to reset ruleset
It's common to have duplicate selectors in media queries or nested
selectors. This change checks to see if the selector has already been
added and skips it if so.

--- a/test/fixtures/filter-suit.css
+++ b/test/fixtures/filter-suit.css
@@ -30,6 +30,18 @@
   margin: 10px;
 }
 
+@media (min-width: 800px) {
+  .MyComponent-part {
+    margin: 10px;
+  }
+}
+
+.MyComponent {
+  & .MyComponent-part {
+    margin: 10px;
+  }
+}
+
 .MyComponent-anotherPart {
   background-color: #FFF;
 }
