--- a/test/fixtures/keyframes.expected.css
+++ b/test/fixtures/keyframes.expected.css
@@ -9,3 +9,14 @@
     transform: none;
   }
 }
+@-webkit-keyframes fadeInUp {
+  0% {
+    opacity: 0;
+    transform: translate3d(0, 100%, 0);
+  }
+
+  100% {
+    opacity: 1;
+    transform: none;
+  }
+}
